--- a/README
+++ b/README
@@ -16,5 +16,4 @@ are as easy as with dictionaries.
 Out of simplicity comes no dependencies - the code relies solely on Python
 standard libraries.
 
-The perhaps greatest setback is that it requires Python 2.5, or Python 2.6. No
-attempt to backport to Python 2.4 will ever be made, because: it's old.
+`simples3` requires Python 2.5 or a newer 2.x release.
