--- a/README
+++ b/README
@@ -17,3 +17,8 @@ Out of simplicity comes no dependencies - the code relies solely on Python
 standard libraries.
 
 `simples3` requires Python 2.5 or a newer 2.x release.
+
+IRC
+---
+
+``#sendapatch`` on ``chat.freenode.net``.
