--- a/README
+++ b/README
@@ -16,7 +16,7 @@ are as easy as with dictionaries.
 Out of simplicity comes no dependencies - the code relies solely on Python
 standard libraries.
 
-`simples3` requires Python 2.5 or a newer 2.x release.
+`simples3` requires Python 2.5+ and nose for running tests. Python 3 support is not yet available.
 
 IRC
 ---
